--- a/up_document/views/document_menu_view.xml
+++ b/up_document/views/document_menu_view.xml
@@ -40,7 +40,7 @@
             <field name="name">My Attachment Download Application</field>
             <field name="res_model">ir.attachment.application</field>
             <field name="view_type">form</field>
-            <field name="view_mode">tree</field>
+            <field name="view_mode">tree,form</field>
             <field name="domain">[('apply_user_id','=',uid)]</field>
         </record>
         <record id="action_view_apply_tree" model="ir.actions.act_window.view">
