--- a/up_document/static/src/css/directory.css
+++ b/up_document/static/src/css/directory.css
@@ -44,6 +44,14 @@
     border-bottom: solid 1px #808080;
 }
 
+.openerp .oe-document-tree .tree-directory-container .directory-line:hover {
+    background-color: gainsboro;
+}
+
+.openerp .oe-document-tree .tree-directory-container .dragenter {
+    background-color: gainsboro;
+}
+
 .openerp .oe-document-tree .tree-directory-container .directory-line .tips {
     color: grey;
     margin-right: 80px;
