--- a/up_pro_manchange/views/manager_change_view.xml
+++ b/up_pro_manchange/views/manager_change_view.xml
@@ -60,13 +60,10 @@
             <field name="model">project.project</field>
             <field name="inherit_id" ref="up_project.edit_project_inherit"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='user_id']" position="replace">
-                    <group colspan="2" col="3">
-                        <field name="user_id" readonly="1" widget="many2many_tags"/>
-                        <button name="button_change_project_manager" type="object" string="项目负责人变更" class="oe_link"
+                <field name="member_ids" position="before">
+                    <button name="button_change_project_manager" type="object" string="项目负责人变更" class="oe_button"
                                 attrs="{'invisible':[('is_user_is_project_manager','=',False),('is_user_in_engineer_group','=',False)]}"/>
-                    </group>
-                </xpath>
+                </field>
             </field>
         </record>
     </data>
