UPDIS-632 归档过程及下载审批、项目负责人更改流程显示签名图片 修改原有表单归档显示方式

--- a/up_document/views/attachment_view.xml
+++ b/up_document/views/attachment_view.xml
@@ -172,15 +172,15 @@
                             <field name="is_expired"/>
                         </group>
                         <group string="发起人">
-                            <field name="apply_user_id" readonly="1"/>
+                            <field name="apply_user_id" readonly="1" widget="signature"/>
                             <field name="apply_date" readonly="1"/>
                         </group>
                         <group string="所长">
-                            <field name="director_user_id" readonly="1"/>
+                            <field name="director_user_id" readonly="1" widget="signature"/>
                             <field name="director_approve_date" readonly="1"/>
                         </group>
                         <group string="文档管理员">
-                            <field name="approve_user_id" readonly="1"/>
+                            <field name="approve_user_id" readonly="1" widget="signature"/>
                             <field name="approve_date" readonly="1"/>
                         </group>
                     </sheet>
