--- a/up_document/views/document_view.xml
+++ b/up_document/views/document_view.xml
@@ -61,6 +61,9 @@
                             groups="base.group_document_user"/>
                     <newline/>
                     <field name="index"/>
+                    <newline/>
+                    <field name="is_encrypt"/>
+                    <button string="同步子文件夹加密属性" type="object" name="button_update_sub_encript" groups="base.group_document_user"/>
                 </xpath>
                 <xpath expr="//field[@name='parent_id']" position="replace">
                     <field name="parent_id" on_change="onchange_parent_id(parent_id)">
