UPDIS-633	Major 将需要加密的文件夹下的文件同普通文件分离开 增加文件加密文件复制与同步功能

--- a/up_document/views/document_view.xml
+++ b/up_document/views/document_view.xml
@@ -63,7 +63,7 @@
                     <field name="index"/>
                     <newline/>
                     <field name="is_encrypt"/>
-                    <button string="同步子文件夹加密属性" type="object" name="button_update_sub_encript" groups="base.group_document_user"/>
+                    <button string="同步加密属性" type="object" name="button_update_sub_encrypt" groups="base.group_document_user"/>
                 </xpath>
                 <xpath expr="//field[@name='parent_id']" position="replace">
                     <field name="parent_id" on_change="onchange_parent_id(parent_id)">
