--- a/signature/views/res_user_view.xml
+++ b/signature/views/res_user_view.xml
@@ -7,7 +7,7 @@
             <field name="inherit_id" ref="base.view_users_form"/>
             <field name="arch" type="xml">
                 <field name="image" position="after">
-                    <field name="sign_image" widget="image" class="oe_avatar oe_left" groups="base.group_no_one"/>
+                    <field name="sign_image" widget="image" class="oe_avatar oe_left" groups="base.group_erp_manager"/>
                 </field>
             </field>
         </record>
