UPDIS-642 文档管理页面显示文件创建时间

--- a/up_document/static/src/css/directory.css
+++ b/up_document/static/src/css/directory.css
@@ -126,3 +126,8 @@
 .openerp .oe-document-tree .tree-directory-container .button-holder .file-upload {
     display: none !important;
 }
+
+.openerp .oe-document-tree .tree-directory-container .oe_other {
+    margin-left: 10px;
+    color: #808080;
+}
