UPDIS-652	Major 归档过程中表单打印功能不能用

--- a/up_project/report/header.xml
+++ b/up_project/report/header.xml
@@ -52,10 +52,15 @@
             </field>
             <field name="html">
                 <![CDATA[
-            <html>
-                <body>
-                </body>
-            </html>]]>
+<html>
+    <head>
+        <meta content="text/html; charset=UTF-8" http-equiv="content-type"/>
+        <style type="text/css">
+            ${css}
+        </style>
+    </head>
+</html>
+]]>
             </field>
             <field name="footer_html"><![CDATA[
             <html>
