--- a/up_pro_manchange/views/manager_change_view.xml
+++ b/up_pro_manchange/views/manager_change_view.xml
@@ -43,8 +43,7 @@
                                        domain="[('id','in',context.get('chief_engineer_domain',[]))]"/>
                             </group>
                             <group colspan="2">
-                                <field name="attachment_ids" widget="many2many_binary" attrs="{'readonly':[('state','!=','draft')]}"
-                                       res_model="project.project" res_id="project_id" context="{'parent_id':%(up_project.dir_up_project_man_change)d}"/>
+                                <field name="attachment_ids" widget="many2many_binary" attrs="{'readonly':[('state','!=','draft')]}"/>
                             </group>
                             <group string="审批记录" colspan="2" col="4">
                                 <field name="apply_id" readonly="1" widget="signature"/>
